# thrust_simple

./: CMakeLists.txt  README.md  thrust_simple.cpp
